# free-genai-bootcamp-2025

./: .gitignore  README.md
.github/workflows/: backend-tests.yml  backend_tests.yml  frontend-vue-tests.yml  writing-app-tests.yml
agentic-workflow/: README.md  claude_models.json  env.template  main.py  pyproject.toml  requirements.txt  youtube_functions.py
dev-tools/: README.md
genai-architecting/: README.md
lang-portal/backend-fastapi/: README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
lang-portal/backend-fastapi/alembic/: env.py
lang-portal/backend-fastapi/alembic/versions/: 534ad859bbb7_add_created_at_to_groups.py  5773dc816c0c_add_description_to_groups_and_fix_.py  f1be57e7b9fc_initial_migration.py
lang-portal/backend-fastapi/app/: main.py
lang-portal/backend-fastapi/app/api/api_v1/: api.py
lang-portal/backend-fastapi/app/api/api_v1/endpoints/: dashboard.py  groups.py  study.py  words.py
lang-portal/backend-fastapi/app/core/: config.py
lang-portal/backend-fastapi/app/db/: base.py  seed.py
lang-portal/backend-fastapi/app/models/: base.py  group.py  study.py  word.py
lang-portal/backend-fastapi/app/schemas/: dashboard.py  group.py  study.py  word.py
lang-portal/backend-fastapi/lang_portal_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lang-portal/backend-fastapi/tests/: conftest.py
lang-portal/backend-fastapi/tests/api/: test_dashboard.py  test_groups.py  test_study.py  test_words.py
lang-portal/backend-flask/: requirements.txt
lang-portal/frontend-vue/: README.md  package-lock.json  package.json
lang-portal/frontend-vue/src/: App.vue
lang-portal/frontend-vue/src/components/: Breadcrumbs.vue  Sidebar.vue  StudySessionsTable.vue  Table.vue  TableCell.vue  TableHeader.vue  TableRow.vue  WordsTable.vue
lang-portal/frontend-vue/src/layouts/: MainLayout.vue
lang-portal/prompts/frontend/: prompt.md
lang-portal/toki-pona-api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
lang-portal/toki-pona-api/docs/: project-structure.md
lang-portal/toki-pona-api/migrations/: env.py
lang-portal/toki-pona-api/migrations/versions/: 20250217_0413_570a747a1b90_initial_migration.py
lang-portal/toki-pona-api/src/toki_pona_api/: config.py  dependencies.py  exceptions.py  main.py
lang-portal/toki-pona-api/src/toki_pona_api/api/v1/: router.py  utils.py
lang-portal/toki-pona-api/src/toki_pona_api/api/v1/endpoints/: __init__.py  groups.py  study_sessions.py  words.py
lang-portal/toki-pona-api/src/toki_pona_api/crud/: __init__.py  base.py  group.py  study_session.py  word.py
lang-portal/toki-pona-api/src/toki_pona_api/db/: __init__.py  base.py  session.py
lang-portal/toki-pona-api/src/toki_pona_api/models/: __init__.py  group.py  study_session.py  word.py
lang-portal/toki-pona-api/src/toki_pona_api/schemas/: __init__.py  group.py  study_session.py  word.py
lang-portal/toki-pona-api/tests/: __init__.py  conftest.py  test_config.py  test_dependencies.py
lang-portal/toki-pona-api/tests/test_api/: test_groups.py  test_study_sessions.py  test_words.py
lang-portal/toki-pona-api/tests/test_crud/: __init__.py  test_base.py  test_groups.py  test_study_sessions.py  test_words.py
listening-app/: .env.example  README.md  app.py  pyproject.toml
listening-app/utils/: README.md  captions_lesson_01.vtt  youtube_transcript.py
opea-comps/: README.md
sentence-constructor/: README.md
sentence-constructor/chatgpt/: README.md
signing-app/: .gitignore  README.md  main.py  pyproject.toml  sign_visualizer.py
writing-app/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cv2_matchshape.app.py  cv2_orb.app.py  download_efficientnet.py  imread.app.py  mediapipe.app.py  orb.app.py  pyproject.toml  requirements.txt
writing-app/.streamlit/: config.toml
writing-app/experiments/: cv2_matchshape.app.py  cv2_matchtemplate.app.py  cv2_orb.app.py  mediapipe.app.py  mp_efficientnet.app.py
writing-app/scripts/: README.md  docker_entrypoint.sh  download_efficientnet.py  download_mobilenet.py  ensure_model.py  process_svgs.py  scraper.py  svg_processor.py
writing-app/tests/: conftest.py  test_app.py
(+29 files in other folders)
