[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-portal-backend"
version = "0.1.0"
authors = [
    { name = "Free GenAI Bootcamp" }
]
description = "Language Learning Portal Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
